src/test/deca/context/invalid/classmethode15.deca
class A {
	void methode(int k,boolean n) {
        int a=k;   
	}
    void methode(int k,boolean n) {
        int a=k;   
	}
}

